k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cut-tracker
  namespace: default
spec:
  selector:
    app: cut-tracker
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
